# bazel_java

./: .gitignore  BUILD.bazel  MODULE.bazel
custom_rules/: property_rules.bzl  xsd_jaxb.bzl
schemas/: purchase_order.xsd
src/com/example/: HelloWorld.java  HelloWorldTest.java
src/com/example/util/: CollectionUtils.java  StringUtils.java
