load("//custom_rules:property_rules.bzl", "properties_file")
load("//custom_rules:xsd_jaxb.bzl", "xsd_jaxb")


# # Creating Java object with XSD
# not working !!!
# xsd_jaxb(
#     name = "purchase_order_model",
#     srcs = ["schemas/purchase_order.xsd"],
#     package = "com.example.model",
#     deps = [
#         "@maven//:javax_xml_bind_jaxb_api",
#     ],
# )



# creating a properties file dynamically during the build using custom rule property_rules.bzl
properties_file(
    name = "app-config",
    properties = {
        "app.name": "MyApp",
        "app.version": "1.0.0",
        "app.debug": "true",
    },
)


java_library(
    name = "string-utils",
    srcs = ["src/com/example/util/StringUtils.java"],
    visibility = ["//visibility:public"],
)


java_library(
    name = "collection-utils",
    srcs = ["src/com/example/util/CollectionUtils.java"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)





java_binary(
    name = "hello-world",
    srcs = ["src/com/example/HelloWorld.java"],
    main_class = "com.example.HelloWorld",
    deps =[
        ":string-utils",
        ":collection-utils",

    ]
)

java_test(
    name = "hello-world-test",
    srcs = ["src/com/example/HelloWorldTest.java"],
    test_class = "com.example.HelloWorldTest",  # Add this line
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core",
        ":string-utils"
    ],
)
